<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fundo_tarefeiros">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPhotoUrl"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/profile_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/profile_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp">

        <EditText
            android:id="@+id/etCountry"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint="@string/profile_country"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint="@string/profile_city"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/profile_phone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSearchDiameter"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:text="@string/search_diameter_tv"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSearchDiameter"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/search_diameter"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etKm"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/profile_phone"
            android:text="@string/km"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <Button
        android:id="@+id/btEdit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/edit_profile"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/save"
        android:textStyle="bold" />
    </RelativeLayout>
    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/logout_button"
        android:textStyle="bold" />


</LinearLayout>