<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.se_ulusofona.tarefeiros.controller.LoginActivity"
    android:background="@mipmap/fundo_tarefeiros">

    <ImageView
        android:id="@+id/imageViewLogotipo"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/logotipo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_button"
        android:textSize="12sp"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="159dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="12sp" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:src="@mipmap/entity"/>
</LinearLayout>